Fix and enhance dark mode support

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,8 +1,7 @@
-/* color palette from <https://github.com/vuejs/theme> */
 :root {
   --vt-c-white: #ffffff;
-  --vt-c-white-soft: #f8f8f8;
-  --vt-c-white-mute: #f2f2f2;
+  --vt-c-white-soft: #f0f0f0;
+  --vt-c-white-mute: #e0e0e0;
 
   --vt-c-black: #181818;
   --vt-c-black-soft: #222222;
@@ -10,8 +9,8 @@
 
   --vt-c-indigo: #2c3e50;
 
-  --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
-  --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
+  --vt-c-divider-light-1: rgba(60, 60, 60, 0.4);
+  --vt-c-divider-light-2: rgba(60, 60, 60, 0.3);
   --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
   --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
 
@@ -60,8 +59,8 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
+  color: var(--vt-c-text-light-1);
+  background: var(--vt-c-white);
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
